--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
@@ -13,10 +13,10 @@
    "source": [
     "## Instructor Information\n",
     "\n",
-    " * Instructor: \n",
-    " * Instructor email: \n",
-    " * Instructor phone: (email is the best way to get in touch)\n",
-    " * Office Hours:\n",
+    " * Instructor: Peter Kazarinoff\n",
+    " * Instructor email: peter.kazarinoff@pcc.edu\n",
+    " * Instructor phone: 971-722-8065(email is the best way to get in touch)\n",
+    " * Office Hours: Mon 9:30am-11:30am and Wed 1pm-4pm\n",
     " * Office Location: SY ST200"
    ]
   },
@@ -41,7 +41,7 @@
     "\n",
     "### Textbook\n",
     "\n",
-    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available on LeanPub.com and online at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/)\n",
+    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available online at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon soon.\n",
     "\n",
     "### Other course materials\n",
     "\n",
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
